# TAPPaaS

./: .gitignore  CLAUDE.md  INSTALL-ENVIRONMENT.md  INSTALL-VARIANT.md  INSTALL.md  LICENSE.html  README.md
.claude/: settings.json
.claude/agents/: agent-architect.md  agent-bash-dev.md  agent-infra.md  agent-nix-dev.md  agent-opnsense.md  agent-pm.md  agent-python-dev.md  agent-security.md  agent-tester.md  agents.md
.claude/commands/: post-task-retro.md  regenerate-dependencies.md  retro.md  tappaas-module-dependencies.md  tappaas-statistics.md  tappaas-verify-module-ids.md
.claude/skills/: post-task-retro  tappaas-zone-preflight
.github/workflows/: build-nixos-template-image.yml  build-opnsense-image.yml
Documentation/: Approach.md  Architecture.md  Bootstrap.md  Contributors.md  Customer Segment.md  Digital Sovereignty.md  Example_SingelNode_TAPpaas_ProductionServer-BluePrint  Example_SingleNode_TAPpaas_ProductionServer_HOME+SMB.md  Examples.md  FAQ.md  Inspiration.md  NetworkDesign-  Office Stack.md  README.md  Single Sign On.md  StorageDesign.md  TODO  TODO.md  Vision.md
Documentation/Architecture/: Capabilities.md  Configuration.md  Hardware.md  NetworkDesign-Visual.md  NetworkDesign.md  README.md  SingleSignOnDesign.md  StorageDesign.md  TheSoftwareStack.md
Documentation/Examples/: BluePrint_SingelNode_TAPpaas_ProductionServer  README.md  TAPPaaS - AI assisted compliance report.md
Documentation/Installation/: Bootstrap.md  Design.md  README.md
Documentation/assorted old stuff/: Assorted Rambelings.md  Community.md  Github Options.md  Home.md  Manifesto.md  README.md  TODO.md  Vision.md
ISSUES/: backup-install-script-fix.md  firewall-hardening-backlog.md  netbird-dns-management-fix.md  netbird-macos-client-sequoia-setup.md  opnsense-26.1-cleanup-summary.md  opnsense-26.1-interface-assignment.md  opnsense-26.1-investigation-log.md  opnsense-26.1-verification-results.md  templates-nixos-install-flaky-first-attempt.md  zfs-recv-hang-img-path-no-preflight.md  zone-manager-block-private-shadows-auto-pinholes.md
docs/: Approach.md  CNAME  Contributors.md  Digital Sovereignty.md  Inspiration.md  README.md  Variants.md  Vision.md  _config.yml  index.md
docs/ADR/: ADR-001 - Use Trunk Mode for TAPPaaS VM VLAN Connectivity.md  (+19 more)
src/: README.md  STATISTICS.md  config local.template  config.tappaas  module-catalog.json  module-dependencies.md  modules.json
src/foundation/30-tappaas-cicd/opnsense-controller/src/: README.md  pyproject.toml
src/foundation/30-tappaas-cicd/opnsense-controller/src/opnsense_controller/: __init__.py  config.py  dhcp_manager.py  dns_manager_cli.py  firewall_cli.py  firewall_manager.py  main.py  vlan_manager.py  zone_manager.py
src/foundation/30-tappaas-cicd/opnsense-controller/src/opnsense_vlan_manager/: __init__.py  vlan_manager.py
src/foundation/30-tappaas-cicd/update-tappaas/src/: pyproject.toml
src/foundation/30-tappaas-cicd/update-tappaas/src/update_tappaas/: __init__.py  main.py  update_node.py
src/foundation/tappaas-cicd/controller/identity-controller/src/: pyproject.toml
src/foundation/tappaas-cicd/controller/identity-controller/src/identity_controller/: __init__.py  authentik_cli.py  authentik_manager.py  people_primitives.py  people_sync.py
src/foundation/tappaas-cicd/controller/identity-controller/src/test/: test_authentik_manager.py  test_people_primitives.py
src/foundation/tappaas-cicd/opnsense-controller/src/: pyproject.toml
src/foundation/tappaas-cicd/opnsense-controller/src/opnsense_controller/: __init__.py  acme_cli.py  acme_manager.py  authentik_cli.py  authentik_manager.py  caddy_cli.py  caddy_manager.py  dhcp_manager.py  dns_manager_cli.py  firewall_cli.py  firewall_manager.py  firewall_rules_cli.py  firewall_rules_manager.py  log.py  nat_manager.py  rules_manager.py  syslog_cli.py  syslog_manager.py  test_network_cli.py  test_network_manager.py  unbound_cli.py  vlan_manager.py  zone_manager.py
src/foundation/tappaas-cicd/opnsense-controller/src/test/: test_acme_manager.py  test_authentik_manager.py  test_caddy_manager.py  test_dhcp_manager.py  test_dns_manager_cli.py  test_rules_manager.py  test_zone_manager.py
src/foundation/tappaas-cicd/update-tappaas/src/: pyproject.toml
src/foundation/tappaas-cicd/update-tappaas/src/update_tappaas/: main.py  update_node.py
(+1174 files in other folders)
