[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opnsense-controller"
version = "0.1.0"
description = "OPNsense controller for TAPPaaS using OPNsense API client"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "oxl-opnsense-client",
    "httpx",
]

[project.scripts]
opnsense-controller = "opnsense_controller.main:main"
opnsense-firewall = "opnsense_controller.firewall_cli:main"
zone-manager = "opnsense_controller.zone_manager:main"
dns-manager = "opnsense_controller.dns_manager_cli:main"
caddy-manager = "opnsense_controller.caddy_cli:main"
nat-manager = "opnsense_controller.nat_cli:main"
acme-manager = "opnsense_controller.acme_cli:main"
authentik-manager = "opnsense_controller.authentik_cli:main"
syslog-manager = "opnsense_controller.syslog_cli:main"
rules-manager = "opnsense_controller.rules_manager:main"
test-network-manager = "opnsense_controller.test_network_cli:main"

[tool.setuptools.packages.find]
where = ["."]
